# LightyChat

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: command_dict.md  lightychat_information_protocol.md  main_frame.md  message_type.md  module_design.md  modules.md  plan.md  tmp.md
src/lightychat/: __main__.py
src/lightychat/client/: command_router.py  heartbeat_client.py  input_switch.py  lobby_handler.py  message_queue.py  session_controller.py  terminal_ui.py
src/lightychat/client/commands/: base_command.py
src/lightychat/client/commands/chat/: clear_command.py  exit_command.py  help_command.py  kick_command.py  list_command.py  lock_command.py  msg_command.py  mute_command.py  myid_command.py  unlock_command.py  unmute_command.py
src/lightychat/client/commands/lobby/: config_command.py  create_command.py  help_command.py  join_command.py  quit_command.py
src/lightychat/common/: entities.py  protocol_handler.py  receiver.py  sender.py  settings.py  test_sender_receiver.py
src/lightychat/server/: command_handler.py  connection_manager.py  heartbeat_checker.py  logger.py  message_router.py  server_controller.py  user_table.py
src/lightychat/server/commands/: base_command.py  server_base_command.py  server_kick_command.py  server_list_command.py  server_lock_command.py  server_msg_command.py  server_mute_command.py  server_unlock_command.py  server_unmute_command.py
