[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightychat"
version = "0.1.0"
description = "LightyChat - A small LAN Chatroom"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "flask>=3.0",
    "pywebview>=5.0",
    "pystray>=0.19",
    "pillow>=10.0",
    "windows-curses>=2.3.3; sys_platform == 'win32'"
]

[project.scripts]
lightyChat = "lightychat.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["lightychat*"]
exclude = ["tests*", "docs*"]